adicionado porta e host ao .env

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-SECRET_KEY = "django-insecure-6^7+0qxx%$%!%mhh0rnk$_w(87wu@_6y8jj-ao)+6a(e1*4fgd"
+SECRET_KEY="django-insecure-6^7+0qxx%$%!%mhh0rnk$_w(87wu@_6y8jj-ao)+6a(e1*4fgd"
+DB_USER="root"
+DB_PASSWORD="admin"
+SQL_HOST="localhost"
+SQL_PORT="3306"
