adicionado 'DJANGO_DEBUG' ao .env

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-SECRET_KEY="django-insecure-6^7+0qxx%$%!%mhh0rnk$_w(87wu@_6y8jj-ao)+6a(e1*4fgd"
+ALLOWED_HOSTS="127.0.0.1, localhost"
 DB_USER="root"
 DB_PASSWORD="admin"
+DJANGO_DEBUG="True"
 SQL_HOST="localhost"
 SQL_PORT="3306"
+MYSQL_DATABASE="authdb"
+SECRET_KEY="django-insecure-6^7+0qxx%$%!%mhh0rnk$_w(87wu@_6y8jj-ao)+6a(e1*4fgd"
