--- a/manifests/django-app-deploy.yaml
+++ b/manifests/django-app-deploy.yaml
@@ -20,3 +20,10 @@ spec:
         envFrom:
         - configMapRef:
             name: django-configmap
+        env:
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: django-secret
+              key: DB_PASSWORD
+        
