--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 ALLOWED_HOSTS="127.0.0.1, localhost"
-DB_USER="root"
-DB_PASSWORD="admin"
 DJANGO_DEBUG="True"
-SQL_HOST="localhost"
-SQL_PORT="3306"
-MYSQL_DATABASE="authdb"
 SECRET_KEY="django-insecure-6^7+0qxx%$%!%mhh0rnk$_w(87wu@_6y8jj-ao)+6a(e1*4fgd"
+
+MYSQL_DATABASE="root"
+MYSQL_PASSWORD="admin"
+MYSQL_HOST="localhost"
+MYSQL_PORT="3306"
+MYSQL_DATABASE="authdb"
+
+MONGO_DATABASE="filesdb"
+MONGO_HOST="mongodb://host.minikube.internal:27017/videos"
