--- a/manifests/django-app-configmap.yaml
+++ b/manifests/django-app-configmap.yaml
@@ -6,9 +6,9 @@ data:
   ALLOWED_HOSTS: |
     localhost:127.0.0.1
     10.0.0.1:10.0.0.1
-  SQL_HOST: mysql-service
-  SQL_PORT: "3306"
+  MYSQL_HOST: mysql-service
+  MYSQL_PORT: "3306"
   SECRET_KEY: "django-insecure-6^7+0qxx%$%!%mhh0rnk$_w(87wu@_6y8jj-ao)+6a(e1*4fgd"
   DJANGO_DEBUG: "False"
-  DB_USER: "root"
+  MYSQL_USER: "root"
   MYSQL_DATABASE: "authdb"
