consertado erro de variavel

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ ALLOWED_HOSTS="127.0.0.1, localhost"
 DJANGO_DEBUG="True"
 SECRET_KEY="django-insecure-6^7+0qxx%$%!%mhh0rnk$_w(87wu@_6y8jj-ao)+6a(e1*4fgd"
 
-MYSQL_DATABASE="root"
+MYSQL_USER="root"
 MYSQL_PASSWORD="admin"
 MYSQL_HOST="localhost"
 MYSQL_PORT="3306"
