descomentado MONGO_HOST

--- a/.env
+++ b/.env
@@ -15,4 +15,4 @@ MYSQL_PORT="3306"
 MYSQL_DATABASE="authdb"
 
 MONGO_DATABASE="filesdb"
-# MONGO_HOST="mongodb://host.minikube.internal:27017/videos"
+MONGO_HOST="mongodb://host.minikube.internal:27017/videos"
