--- a/manifests/django-app-configmap.yaml
+++ b/manifests/django-app-configmap.yaml
@@ -12,3 +12,14 @@ data:
   DJANGO_DEBUG: "False"
   MYSQL_USER: "root"
   MYSQL_DATABASE: "authdb"
+
+  MONGO_DATABASE: "filesdb"
+  MONGO_HOST: "mongodb://host.minikube.internal:27017/videos"
+
+  DJANGO_HASHER: "django.contrib.auth.hashers.Argon2PasswordHasher,
+    django.contrib.auth.hashers.PBKDF2PasswordHasher,
+    django.contrib.auth.hashers.PBKDF2SHA1PasswordHasher,
+    django.contrib.auth.hashers.BCryptSHA256PasswordHasher,
+    django.contrib.auth.hashers.ScryptPasswordHasher,"
+
+  
