--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ MYSQL_DATABASE="authdb"
 
 MONGO_DATABASE="filesdb"
 MONGO_HOST="mongodb://host.minikube.internal:27017/videos"
+
+VIDEO_QUEUE="video"
+MP3_QUEUE="mp3"
