adicionado envs para as queues de videos e mp3

--- a/manifests/django-app-configmap.yaml
+++ b/manifests/django-app-configmap.yaml
@@ -22,4 +22,5 @@ data:
     django.contrib.auth.hashers.BCryptSHA256PasswordHasher,
     django.contrib.auth.hashers.ScryptPasswordHasher,"
 
-  
+  VIDEO_QUEUE: "video"
+  MP3_QUEUE: "mp3"
