--- a/manifests/django-app-configmap.yaml
+++ b/manifests/django-app-configmap.yaml
@@ -3,9 +3,7 @@ kind: ConfigMap
 metadata:
   name: django-configmap
 data:
-  ALLOWED_HOSTS: |
-    localhost:127.0.0.1
-    10.0.0.1:10.0.0.1
+  ALLOWED_HOSTS: localhost:127.0.0.1, 10.0.0.1:10.0.0.1, mp3converter.com
   MYSQL_HOST: mysql-service
   MYSQL_PORT: "3306"
   SECRET_KEY: "django-insecure-6^7+0qxx%$%!%mhh0rnk$_w(87wu@_6y8jj-ao)+6a(e1*4fgd"
