--- a/.env
+++ b/.env
@@ -7,14 +7,14 @@ DJANGO_HASHER="django.contrib.auth.hashers.Argon2PasswordHasher,
     django.contrib.auth.hashers.BCryptSHA256PasswordHasher,
     django.contrib.auth.hashers.ScryptPasswordHasher,"
 
-
 MYSQL_USER="root"
 MYSQL_PASSWORD="admin"
 MYSQL_HOST="localhost"
 MYSQL_PORT="3306"
 MYSQL_DATABASE="authdb"
 
-MONGO_DATABASE="filesdb"
+VIDEOS_DATABASE="filesdb"
+MP3S_DATABASE="mp3sdb"
 MONGO_HOST="mongodb://host.minikube.internal"
 MONGO_PORT="27017"
 
