--- a/manifests/consumer-configmap.yaml
+++ b/manifests/consumer-configmap.yaml
@@ -13,7 +13,8 @@ data:
   MYSQL_USER: "root"
   MYSQL_DATABASE: "authdb"
 
-  MONGO_DATABASE: "filesdb"
+  VIDEOS_DATABASE: "filesdb"
+  MP3S_DATABASE: "mp3sdb"
   MONGO_HOST: "mongodb://host.minikube.internal"
   MONGO_PORT: "27017"
 
