--- a/manifests/django-app-configmap.yaml
+++ b/manifests/django-app-configmap.yaml
@@ -11,7 +11,9 @@ data:
   MYSQL_USER: "root"
   MYSQL_DATABASE: "authdb"
 
-  MONGO_DATABASE: "filesdb"
+  VIDEOS_DATABASE: "filesdb"
+  MP3S_DATABASE: "mp3sdb"
+
   MONGO_HOST: "mongodb://host.minikube.internal"
   MONGO_PORT: "27017"
 
